[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "geopandas_osm"
version = "0.0.1"
description = "Skeleton of a Python package"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Jacob Wasserman", email = "jwasserman@gmail.com" },
]
dependencies = [
    "six",
    "geopandas",
    "fiona",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
exclude = ["ez_setup", "examples", "tests"]
